--- a/visualization/index.html
+++ b/visualization/index.html
@@ -10143,124 +10143,136 @@
             const container = document.getElementById('celltype-sankey');
             if (!container) return;
             container.classList.remove('loading');
+            Plotly.purge(container);
 
-            // Use real cell type mapping data if available
-            const mappingData = state.data.crossatlas?.celltype_mapping;
+            // Use real shared cell types data
             const sharedTypes = state.data.crossatlas?.shared_cell_types || [];
+            const comparisonData = state.data.crossatlas?.comparison || {};
             const lineageFilter = document.getElementById('mapping-lineage')?.value || 'all';
-
-            let allNodes, allLinks;
-
-            if (mappingData && mappingData.nodes && mappingData.links) {
-                allNodes = mappingData.nodes;
-                allLinks = mappingData.links;
-            } else {
-                // Fallback to mock data
-                allNodes = [
-                    { id: 0, name: 'CD8 T', atlas: 'CIMA', count: 500000 },
-                    { id: 1, name: 'CD4 T', atlas: 'CIMA', count: 600000 },
-                    { id: 2, name: 'Monocyte', atlas: 'CIMA', count: 400000 },
-                    { id: 3, name: 'NK', atlas: 'CIMA', count: 300000 },
-                    { id: 4, name: 'CD8 T', atlas: 'Inflammation', count: 450000 },
-                    { id: 5, name: 'CD4 T', atlas: 'Inflammation', count: 550000 },
-                    { id: 6, name: 'Monocyte', atlas: 'Inflammation', count: 350000 },
-                    { id: 7, name: 'NK', atlas: 'Inflammation', count: 250000 },
-                    { id: 8, name: 'CD8 T', atlas: 'common', count: 950000 },
-                    { id: 9, name: 'CD4 T', atlas: 'common', count: 1150000 },
-                    { id: 10, name: 'Monocyte', atlas: 'common', count: 750000 },
-                    { id: 11, name: 'NK', atlas: 'common', count: 550000 }
-                ];
-                allLinks = [
-                    { source: 0, target: 8, value: 500000, common_name: 'CD8 T' },
-                    { source: 1, target: 9, value: 600000, common_name: 'CD4 T' },
-                    { source: 2, target: 10, value: 400000, common_name: 'Monocyte' },
-                    { source: 3, target: 11, value: 300000, common_name: 'NK' },
-                    { source: 4, target: 8, value: 450000, common_name: 'CD8 T' },
-                    { source: 5, target: 9, value: 550000, common_name: 'CD4 T' },
-                    { source: 6, target: 10, value: 350000, common_name: 'Monocyte' },
-                    { source: 7, target: 11, value: 250000, common_name: 'NK' }
-                ];
-            }
 
             // Define lineage groups with pattern matching
             const lineagePatterns = {
-                'T_cell': ['CD4', 'CD8', 'Treg', 'T cell', 'T_CD', 'MAIT', 'NKT', 'gdT', 'Th0', 'Th1', 'Th2', 'DP', 'Cytotoxic T'],
-                'Myeloid': ['Mono', 'DC', 'pDC', 'cDC', 'Macrophage', 'Neutrophil', 'Basophil'],
-                'B_cell': ['B cell', 'B ', 'Plasma'],
-                'NK_ILC': ['NK', 'ILC', 'Innate_lymphoid']
+                'T_cell': ['CD4', 'CD8', 'Treg', 'T cell', 'MAIT', 'Th1', 'Th2'],
+                'Myeloid': ['Mono', 'DC', 'pDC', 'cDC', 'Macrophage'],
+                'B_cell': ['B cell', 'Plasma'],
+                'NK_ILC': ['NK', 'ILC']
             };
 
-            // Filter by lineage
-            let filteredLinks = allLinks;
+            // Filter cell types by lineage
+            let filteredTypes = sharedTypes;
             if (lineageFilter !== 'all') {
                 const patterns = lineagePatterns[lineageFilter] || [];
-                filteredLinks = allLinks.filter(l => {
-                    const commonName = l.common_name || '';
-                    return patterns.some(pattern => commonName.toLowerCase().includes(pattern.toLowerCase()));
-                });
+                filteredTypes = sharedTypes.filter(ct =>
+                    patterns.some(p => ct.toLowerCase().includes(p.toLowerCase()))
+                );
             }
 
-            // Get nodes that are in filtered links
-            const usedNodeIds = new Set();
-            filteredLinks.forEach(l => {
-                usedNodeIds.add(l.source);
-                usedNodeIds.add(l.target);
-            });
-
-            // Build new node list with remapped IDs
-            const nodeIdMap = {};
-            const nodes = [];
-            let newIdx = 0;
-            allNodes.forEach(n => {
-                if (usedNodeIds.has(n.id)) {
-                    nodeIdMap[n.id] = newIdx;
-                    nodes.push({ ...n, id: newIdx });
-                    newIdx++;
-                }
-            });
-
-            // Remap link source/target IDs
-            const links = filteredLinks.map(l => ({
-                ...l,
-                source: nodeIdMap[l.source],
-                target: nodeIdMap[l.target]
-            }));
-
-            // Color by atlas
-            const atlasColors = {
-                'CIMA': '#1f77b4',
-                'Inflammation': '#ff7f0e',
-                'scAtlas': '#2ca02c',
-                'common': '#9467bd'
-            };
-
-            if (nodes.length === 0 || links.length === 0) {
+            if (filteredTypes.length === 0) {
                 container.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">No cell types found for selected lineage.</p>';
                 return;
             }
 
-            const data = {
-                type: 'sankey',
-                orientation: 'h',
-                node: {
-                    pad: 10,
-                    thickness: 15,
-                    label: nodes.map(n => `${n.name} (${n.atlas})`),
-                    color: nodes.map(n => atlasColors[n.atlas] || '#999'),
-                    hovertemplate: '<b>%{label}</b><br>Cells: %{value:,}<extra></extra>'
-                },
-                link: {
-                    source: links.map(l => l.source),
-                    target: links.map(l => l.target),
-                    value: links.map(l => l.value),
-                    hovertemplate: '%{source.label} → %{target.label}<br>Cells: %{value:,}<extra></extra>'
-                }
-            };
+            // Extract cell types present in each comparison
+            const cimaInflamTypes = new Set(
+                (comparisonData.cima_vs_inflammation?.data || []).map(d => d.cell_type).filter(Boolean)
+            );
+            const cimaScatlasTypes = new Set(
+                (comparisonData.cima_vs_scatlas?.data || []).map(d => d.cell_type).filter(Boolean)
+            );
+            const inflamScatlasTypes = new Set(
+                (comparisonData.inflam_vs_scatlas?.data || []).map(d => d.cell_type).filter(Boolean)
+            );
 
-            Plotly.newPlot(container, [data], {
-                margin: { t: 30, b: 30, l: 30, r: 30 },
-                title: { text: `${sharedTypes.length} Shared Cell Types Across Atlases`, font: { size: 12 } },
-                height: 500
+            // Determine which atlases each cell type appears in
+            const cellTypeAtlases = filteredTypes.map(ct => {
+                const inCima = cimaInflamTypes.has(ct) || cimaScatlasTypes.has(ct);
+                const inInflam = cimaInflamTypes.has(ct) || inflamScatlasTypes.has(ct);
+                const inScatlas = cimaScatlasTypes.has(ct) || inflamScatlasTypes.has(ct);
+                const atlasCount = [inCima, inInflam, inScatlas].filter(Boolean).length;
+                return {
+                    cellType: ct,
+                    inCima,
+                    inInflam,
+                    inScatlas,
+                    atlasCount
+                };
+            }).sort((a, b) => b.atlasCount - a.atlasCount || a.cellType.localeCompare(b.cellType));
+
+            // Create heatmap data
+            const atlases = ['CIMA', 'Inflammation', 'scAtlas'];
+            const zData = atlases.map(atlas =>
+                cellTypeAtlases.map(ct => {
+                    if (atlas === 'CIMA') return ct.inCima ? 1 : 0;
+                    if (atlas === 'Inflammation') return ct.inInflam ? 1 : 0;
+                    if (atlas === 'scAtlas') return ct.inScatlas ? 1 : 0;
+                    return 0;
+                })
+            );
+
+            // Custom colorscale: 0=light gray, 1=colored by atlas
+            const customColorscale = [[0, '#f0f0f0'], [1, '#2ca02c']];
+
+            Plotly.newPlot(container, [{
+                type: 'heatmap',
+                z: zData,
+                x: cellTypeAtlases.map(ct => ct.cellType),
+                y: atlases,
+                colorscale: [[0, '#f5f5f5'], [1, '#1f77b4']],
+                showscale: false,
+                hovertemplate: '<b>%{x}</b><br>%{y}: %{z:d}<extra></extra>',
+                text: zData.map(row => row.map(v => v === 1 ? '✓' : '')),
+                texttemplate: '%{text}',
+                textfont: { size: 14, color: 'white' }
+            }], {
+                xaxis: {
+                    title: 'Cell Type',
+                    tickangle: -45,
+                    tickfont: { size: 11 }
+                },
+                yaxis: {
+                    title: '',
+                    tickfont: { size: 12 }
+                },
+                margin: { t: 50, b: 120, l: 100, r: 30 },
+                title: {
+                    text: `${filteredTypes.length} Harmonized Cell Types Across Atlases`,
+                    font: { size: 14 }
+                },
+                height: 300,
+                annotations: [{
+                    x: 0.5, y: -0.35, xref: 'paper', yref: 'paper',
+                    text: `<b>Legend:</b> ✓ = Cell type present in atlas | Total shared: ${sharedTypes.length} cell types`,
+                    showarrow: false, font: { size: 11 }
+                }]
+            }, { responsive: true });
+
+            // Add a second chart showing atlas overlap counts
+            let overlapContainer = document.getElementById('celltype-overlap-bar');
+            if (!overlapContainer) {
+                overlapContainer = document.createElement('div');
+                overlapContainer.id = 'celltype-overlap-bar';
+                overlapContainer.style.marginTop = '20px';
+                container.parentNode.appendChild(overlapContainer);
+            }
+            Plotly.purge(overlapContainer);
+
+            // Count by atlas overlap
+            const in3 = cellTypeAtlases.filter(ct => ct.atlasCount === 3).length;
+            const in2 = cellTypeAtlases.filter(ct => ct.atlasCount === 2).length;
+            const in1 = cellTypeAtlases.filter(ct => ct.atlasCount === 1).length;
+
+            Plotly.newPlot(overlapContainer, [{
+                type: 'bar',
+                x: ['In All 3 Atlases', 'In 2 Atlases', 'In 1 Atlas'],
+                y: [in3, in2, in1],
+                marker: { color: ['#2ca02c', '#ff7f0e', '#d62728'] },
+                text: [in3, in2, in1],
+                textposition: 'outside',
+                hovertemplate: '%{x}: %{y} cell types<extra></extra>'
+            }], {
+                yaxis: { title: 'Number of Cell Types' },
+                margin: { t: 30, b: 50, l: 60, r: 30 },
+                height: 200
             }, { responsive: true });
         }
 
